apply patch from  Fredrik Johansson <fredrik@mumme.se>

make serializeToString work  DOMNodes

BUG: 126869 

svn path=/branches/KDE/3.5/kdelibs/; revision=556110